# coinseekbot

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.run/: bot.run.xml
diagrams/: README.md  diagram.bpmn
diagrams/postgresql/: schema.rails
docker/: Dockerfile
docker/dev/: docker-compose.yml  down.sh  up.sh
src/: bot.py  container.py  instances.py  main.py  test.py
src/aws/: __init__.py  s3_private_service.py  s3_public_service.py  s3_service.py  test_s3_service.py
src/bot/: binance_api_client.py  bot_chat_router.py  bot_group_commands_router.py  bot_inline_query_router.py  bot_inline_query_service.py  bot_personal_commands_router.py  bot_personal_commands_service.py  callback_auth_middleware.py  callbacks.py  collector.py  config.py  constants.py  engagement_middleware.py  handler.py  main.py  telegram_bot.py  test.py  test_callbacks.py
src/config/: config.py
src/cron/: __init__.py  cron_service.py
src/crypto/: crypto_asset_repo.py  crypto_assets_repo.py  crypto_favourites_repo.py  crypto_ingest_service.py  crypto_watch_repo.py  crypto_watches_repo.py  test_crypto_asset_repo.py  test_crypto_assets_repo.py  test_crypto_favourites_repo.py  test_crypto_ingest_service.py  test_crypto_watch_repo.py  test_crypto_watches_repo.py
src/ingest/: main.py
src/postgres/: __init__.py  base.py  database_context.py  pg_engine.py  pg_repo.py  pg_session.py  postgres_repo.py  postgres_service.py  repo.py  repository.py  session.py  session_context.py
src/redis_client/: __init__.py  redis_service.py
supabase/: config.toml
(+126 files in other folders)
