[tool.poetry]
name = "tracky"
version = "0.1.0"
description = ""
authors = ["eddienubes <cool.gegeg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
python-dotenv = "^1.0.1"
yahooquery = "^2.3.7"
pandas = "^2.2.2"
apscheduler = "4.0.0a5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
