[tool.poetry]
name = "tracky"
version = "0.1.0"
description = ""
authors = ["eddienubes <cool.gegeg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
python-dotenv = "^1.0.1"
yahooquery = "^2.3.7"
pandas = "^2.2.2"
apscheduler = "4.0.0a5"
binance-connector = "^3.7.0"
alembic = "^1.13.1"
aiohttp = "^3.9.5"
pydantic = "^2.7.4"
redis = { extras = ["hiredis"], version = "^5.0.7" }
aioboto3 = "^13.1.0"
pydantic-settings = "^2.3.4"
dataclasses-json = "^0.6.7"
networkx = "^3.3"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
faker = "^26.0.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.2.2"
types-aioboto3 = { extras = ["essential"], version = "^13.1.0" }
pytest-asyncio = "^0.23.8"
pyhamcrest = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
console_output_style = 'count'
addopts = '-rP --log-cli-level=DEBUG --capture=no'
asyncio_mode = 'auto'